--- a/MyProject/resources/sass/partials/_main.scss
+++ b/MyProject/resources/sass/partials/_main.scss
@@ -1,25 +1,8 @@
 
-.nav_bar{
-    &_list{
-        display: flex;
-        justify-content: center;
-        li {
-            padding: 0 5px;
-            a {
-                font-size: 1.5rem;
-                font-weight: bold;
-                text-decoration: none;
-            }
-
-            a:hover {
-                background-color: $softBlue;
-            }
-        }
-    }
-}
 
 
-.wrapper{
+
+.wrapper_home{
     
     h2{
         text-align: center;
@@ -37,7 +20,7 @@
                 h3 {
                     text-align: center;
                 }
-                width: 100;
+                width: 100%;
                 img{
                     width: 100%;
                 }
