--- a/MyProject/resources/sass/app.scss
+++ b/MyProject/resources/sass/app.scss
@@ -3,4 +3,5 @@
 @import 'partials/_reset.scss';
 
 @import 'partials/_header.scss';
-@import 'partials/_main.scss'; 
+@import 'partials/_main.scss';
+@import 'partials/_footer.scss';
