--- a/MyProject/resources/sass/partials/_main.scss
+++ b/MyProject/resources/sass/partials/_main.scss
@@ -15,6 +15,9 @@
         li {
             padding: 5px;
             width: 300px;
+            a{
+                text-decoration: none;
+            }
     
             .products_box{
                 h3 {
@@ -41,9 +44,14 @@
     img{
         width: 100%;
     }
-    p {
+    .description {
         text-align: left;
-        padding: 10px;
+        padding: 15px;
         font-size: 1.4rem;
+        ol{
+            padding: 20px;
+        }
     }
+    
+    
 }
